Lago-K8S/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lago-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: lago-default
  podSelector:
    matchLabels:
      app.kubernetes.io/name: lago-default
